HTML Inhalte ergänzt.

--- a/html/index.html
+++ b/html/index.html
@@ -143,9 +143,9 @@
     <h3>News</h3>
     Es wurden neue Tiere im Regenwald endeckt und es wurden Nachforschungen angestellt.
     <br> <br>
-    <a href="Index.html"><img src="../Bilder/newsBilder/nasenbaer.jpg" width="100%"></a>
-    <a href="Index.html"><img src="../Bilder/newsBilder/affeWeissesFell.jpg" width="100%"></a>
-    <a href="Index.html"><img src="../Bilder/newsBilder/affeMitNase.jpg" width="100%"></a>
+    <a href="index.html"><img src="../Bilder/newsBilder/nasenbaer.jpg" width="100%"></a>
+    <a href="index.html"><img src="../Bilder/newsBilder/affeWeissesFell.jpg" width="100%"></a>
+    <a href="index.html"><img src="../Bilder/newsBilder/affeMitNase.jpg" width="100%"></a>
 </aside>
 
 <footer>
